<resources>
    <string name="app_name">Shelter</string>
    <string name="action_settings">Settings</string>

    <string name="human">Частное лицо</string>
    <string name="organisation">Организация</string>

    <string-array name="typeUser">
        <item>@string/human</item>
        <item>@string/organisation</item>
    </string-array>
    <string-array name="gender">
        <item>@string/m</item>
        <item>@string/w</item>
        <item>@string/none</item>
    </string-array>

    //Login
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="login_btn">ВОЙТИ</string>
    <string name="autorisation">Авторизация</string>

    //Registration
    <string name="txtRegistration">Регистрация</string>
    <string name="txtYouAre">Вы являетесь*</string>
    <string name="lastName">Фамилия*</string>
    <string name="firstName">Имя*</string>
    <string name="patronymic">Отчество</string>
    <string name="companyName">Название*</string>
    <string name="country">Страна*</string>
    <string name="city">Город*</string>
    <string name="phone">Номер телефона*</string>
    <string name="registration_btn">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="you_are">Вы : </string>
    <string name="back">Назад</string>

    //Registration Exception
    <string name="wrong_entered_data">Неправильно введены данные.</string>

    //Log in to app
    <string name="login">"ВОЙТИ"</string>

    //Alert Dialog before Log in App
    <string name="not_log_in">Вы не авторизованы</string>
    <string name="cancel">Отмена</string>
    <string name="log_in_app">Войти в приложение</string>

    //Animal News
    <string name="search">Поиск</string>

    //Animal Card
    <string name="aboutAnimal">О животном :</string>
    <string name="nameAnimal">Имя</string>
    <string name="typeAnimal">Тип</string>
    <string name="sexAnimal">Пол</string>
    <string name="breedAnimal">Порода</string>
    <string name="ageAnimal">Возраст</string>
    <string name="passportAnimal">Паспорт</string>
    <string name="sterilization">Стерилизация/кастрация</string>
    <string name="growthAnimal">Рост</string>
    <string name="descriptionAnimal">Описание</string>

    //Filtering News
    <string name="filteringNews">Фильтр новостей :</string>
    <string name="apply">Применить</string>
    <string name="choseCategory">Выберите категории</string>
    <string name="choseAnimalType">Выберите тип животного</string>
    <string name="choseGender">Выберите пол животного</string>
    <string name="complete">Готово</string>

    //Add new Animal Card
    <string name="addNews">Добавить новую запись :</string>
    <string name="category">Категория*</string>
    <string name="addNameAnimal">Имя*</string>
    <string name="addTypeAnimal">Тип*</string>
    <string name="addSexAnimal">Пол*</string>
    <string name="addCard">Добавить карточку</string>
    <string name="addPhoto">Добавить фотографию</string>
    <string name="addCardIsSuccessful">Карточка успешно добавлена.</string>
    <string name="good">Хорошо</string>

    //Homepage
    <string name="information">Информация</string>
    <string name="phoneUser">Телефон</string>
    <string name="emailUser">Электронная почта</string>
    <string name="card">Карточки</string>
    <string name="noNews">Нет карточек</string>
    <string name="logOut">Выход</string>
    <string name="editUser">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="logoutTitle">Вы действительно хотите выйти?</string>
    <string name="deleteCardTitle">Вы действительно хотите удалить карточку?</string>
    <string name="yes">Да</string>

    //Edit user
    <string name="edit">Редактирование данных :</string>
    <string name="changePhoto">Изменить фотографию</string>

    //Messager
    <string name="messager">Сообщения</string>
    <string name="image_of_animal">Image of animal.</string>

    //Gender
    <string name="m">M</string>
    <string name="w">Ж</string>
    <string name="none">Неизвестно</string>

    //Exception
    <string name="exception">Ошибка</string>

</resources>
