<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/animalForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:title="@string/addNews"
                app:titleMarginStart="16dp"
                app:titleTextColor="@android:color/background_light" />

            <EditText
                android:id="@+id/category"
                style="@style/EditTextLogInApp"
                android:layout_marginTop="32dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_keyboard"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/category"
                android:inputType="text"
                android:selectAllOnFocus="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:autofillHints="" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/addNameAnimal"
                android:lines="1"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <EditText
                android:id="@+id/type"
                style="@style/EditTextLogInApp"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_keyboard"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/addTypeAnimal"
                android:inputType="text"
                android:selectAllOnFocus="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/gender"
                style="@style/EditTextLogInApp"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_keyboard"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/addSexAnimal"
                android:inputType="text"
                android:selectAllOnFocus="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <EditText
                android:id="@+id/breed"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/breedAnimal"
                android:lines="1"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/ageAnimal"
                android:lines="1"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/breed" />

            <EditText
                android:id="@+id/passport"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/passportAnimal"
                android:lines="1"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age" />

            <EditText
                android:id="@+id/sterilization"
                android:visibility="gone"
                style="@style/EditTextLogInApp"
                android:clickable="false"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_keyboard"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/sterilization"
                android:inputType="text"
                android:selectAllOnFocus="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passport" />

            <EditText
                android:id="@+id/growth"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/growthAnimal"
                android:lines="1"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sterilization" />

            <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="@dimen/txtEditHeight"
                android:layout_margin="16dp"
                android:background="@drawable/back_edit_txt"
                android:drawablePadding="@dimen/paddingTxt"
                android:hint="@string/descriptionAnimal"
                android:padding="@dimen/paddingImage"
                android:textColorHint="@color/editTxtHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/growth" />

            <TextView
                android:id="@+id/exception"
                style="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:textColor="@color/colorException"
                android:text="error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/createNews"
                style="@style/Button"
                android:layout_marginBottom="32dp"
                android:text="@string/addCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exception" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/mainColorGreen"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
